--- a/shop-ui/src/main/resources/templates/fragments/scripts.html
+++ b/shop-ui/src/main/resources/templates/fragments/scripts.html
@@ -20,9 +20,9 @@
     <!-- Active js -->
     <script th:src="@{/js/active.js}"></script>
     <!-- Chat js -->
-<!--    <script th:src="@{/webjars/sockjs-client/1.0.2/sockjs.min.js}"></script>-->
-<!--    <script th:src="@{/webjars/stomp-websocket/2.3.3/stomp.min.js}"></script>-->
-<!--    <script th:src="@{/js/chat.js}"></script>-->
+    <script th:src="@{/webjars/sockjs-client/1.0.2/sockjs.min.js}"></script>
+    <script th:src="@{/webjars/stomp-websocket/2.3.3/stomp.min.js}"></script>
+    <script th:src="@{/js/chat.js}"></script>
 </div>
 
 </body>
